fix(pro:tag-select): tag text shouldn't overflow when overlayMatchWidth is true (#1878)

--- a/packages/pro/dark.full.css
+++ b/packages/pro/dark.full.css
@@ -102,7 +102,7 @@
   --ix-pro-tag-select-preset-color-orange-bg: rgb(54, 36, 25);
   --ix-pro-tag-select-color-indicator-size: 12px;
   --ix-pro-tag-select-panel-max-height: 256px;
-  --ix-pro-tag-select-edit-panel-min-width: 225px;
+  --ix-pro-tag-select-edit-panel-min-width: 140px;
   --ix-pro-tag-select-tag-height: 20px;
 }
 
